# Graduation_design

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .recent_projects.json  CHANGELOG.md  Dockerfile  LICENSE  PACKAGING.md  README.md  _audit_result.json  config.ini  ddesign_tool.spec  plan.md  pyproject.toml  release.bat  requirements-dev.txt  requirements.txt  run.bat  test_full_dag.py  yyx1.ddesign.json  使用方法.md  使用方法.txt
.github/workflows/: ci.yml
data/: pipe_final.xlsx  pipe_final2.xlsx  pipe_final2_计算结果.xlsx  pipe_final2_计算结果_20260527_225308.xlsx  yushui_计算结果.xlsx  yushui_计算结果_20260527_225320.xlsx
ddesign_tool/: .recent_projects.json  README.md  main.py  requirements.txt  使用方法.txt
ddesign_tool/data/: pipe_final_计算结果.xlsx  yushui.xlsx
ddesign_tool/mods/: MODS_GUIDE.md  MOD_SPEC.md  __init__.py  discretization_schema.json  mod_discovery.py  mod_manager.py  (+2 more)
docs/: development.md  index.md
knowledge/: INDEX.md  architecture-flow.md  codebase-comprehensive-2026-05-17.md  codebase-learning-2026-05-16.md  constraint-audit-2026-05-16.md  debug-2026-05-17.md  flow-fix-2026-05-19.md  mc-architecture-mapping-2026-05-18.md  multi-water-fix-2026-05-20.md  packaging-guide-2026-05-19.md  progress-2026-05-16.md  session-learnings-2026-05-23.md  session-learnings-2026-05-24-s2.md  session-learnings-2026-05-24-s3.md  session-learnings-2026-05-24-s4.md  session-learnings-2026-05-24.md  session-learnings-2026-05-25-s2.md  session-learnings-2026-05-25-s3.md  session-learnings-2026-05-25-s4.md  session-learnings-2026-05-25.md  session-learnings-2026-05-26-s2.md  session-learnings-2026-05-26.md  session-learnings-2026-05-27-final.md  session-learnings-2026-05-27-s2.md  session-learnings-2026-05-27.md  session-learnings-2026-05-28.md  session-retrospective-2026-05-20.md  usage-guide-2026-05-19.md  work-2026-05-18.md  work-2026-05-19.md
mods/: MODS_GUIDE.md  MOD_SPEC.md  mod_config.py  mod_discovery.py  mod_manager.py  mod_tools.py  mod_validation.py
tests/: conftest.py  kuangjing.ddesign.json  test_base.py  test_bashi_jiliangcao.py  test_bootstrap.py  test_button_functions.py  test_constraint_types.py  test_cost_estimator.py  test_dimension_labels.py  test_erchunchi.py  test_graph_executor.py  test_import_smoke.py  test_kw_input.py  test_mod_system.py  test_performance.py  test_physical_invariants.py  test_processing.py  test_sample.py  test_smoke.py  test_ui_import.py  test_wuni_tisheng.py  test_wushui_tisheng.py  validator_report.html  yyx.ddesign.json
tools/: release.py
(+1845 files in other folders)
