[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graduation-design"
version = "5.3.0"
description = "毕业设计 — 城镇污水处理厂全流程工艺设计一体化工具"
authors = [
    {name = "yyx", email = "yyx@hit.edu.cn"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",  # 统计可视化
    "openpyxl>=3.1.0",  # Excel处理
    "xlrd>=2.0.0",      # 读取旧版Excel
    "xlwt>=1.3.0",      # 写入旧版Excel
    "scipy>=1.10.0",    # 科学计算
    "python-dotenv>=1.0.0",  # 环境变量管理
    "loguru>=0.7.0",    # 简化日志记录
    "tqdm>=4.65.0",     # 进度条
    "click>=8.1.0",     # 命令行接口
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yyx/graduation-design"
Repository = "https://github.com/yyx/graduation-design.git"
"Issue Tracker" = "https://github.com/yyx/graduation-design/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# 项目特定配置
[tool.graduation-design]
project_type = "engineering-analysis"
main_module = "calculate_pipes"
excel_data_dir = "excel/"
output_dir = "output/"